# icondata

./: .gitignore  Cargo.toml  Icondata.toml  Justfile  LICENSE  README.md  icon_index-168687dd4b0052cb.js  icon_index-5062656a9e651cf.js  index.html  output-83010d1aa2a52d21.css  styles-8ec4227316e4b641.css
.cargo/: config.toml
.github/workflows/: build-deploy.yml  build-site.yml  check.yml  publish.yml  scheduled.yml  site-deploy.yml
boilerplate/: Cargo.toml
boilerplate/src/: lib.rs
docs/: icon_index-463bbdc72635a495.js  icon_index-5b4c4b32a4378a24.js  icon_index-aa986ddfc657c935.js  icon_index-b4d4f6bbdfe8ab63.js  icon_index-f5245c8783660eb5.js  index.html
framework_example/: Cargo.toml  README.md
framework_example/src/: lib.rs
icon_index/: Cargo.toml  Makefile.toml  Trunk.toml  index.html  input.css  output.css  package-lock.json  package.json  tailwind.config.js
icon_index/.cargo/: config.toml
icon_index/src/: alert.rs  app.rs  header.rs  icons.rs  lib.rs  main.rs  searchbar.rs  virtual_view.rs
icondata/: Cargo.toml  README.md
icondata/src/: lib.rs
icondata_ai/: Cargo.toml  ICON-LIST.txt  README.md  build.rs
icondata_ai/src/: lib.rs
icondata_bi/: Cargo.toml  ICON-LIST.txt  README.md  build.rs
icondata_bi/src/: lib.rs
icondata_bs/: Cargo.toml  ICON-LIST.txt  README.md  build.rs
icondata_bs/src/: lib.rs
icondata_cg/: Cargo.toml  ICON-LIST.txt  README.md  build.rs
icondata_cg/src/: lib.rs
icondata_ch/: Cargo.toml  ICON-LIST.txt  README.md  build.rs
icondata_ch/src/: lib.rs
icondata_core/: Cargo.toml
icondata_core/src/: lib.rs
icondata_fa/: Cargo.toml  ICON-LIST.txt  README.md  build.rs
icondata_fa/src/: lib.rs
icondata_fi/: Cargo.toml  ICON-LIST.txt  README.md  build.rs
icondata_fi/src/: lib.rs
icondata_hi/: Cargo.toml  ICON-LIST.txt  README.md  build.rs
icondata_hi/src/: lib.rs
icondata_im/: Cargo.toml  ICON-LIST.txt  README.md  build.rs
icondata_im/src/: lib.rs
icondata_io/: Cargo.toml  ICON-LIST.txt  README.md  build.rs
icondata_io/src/: lib.rs
icondata_lu/: Cargo.toml  ICON-LIST.txt  ICONS.md  README.md  build.rs
icondata_lu/src/: lib.rs
icondata_macros/: Cargo.toml
icondata_macros/src/: lib.rs
icondata_mdi/: Cargo.toml  README.md
icondata_oc/: Cargo.toml  ICON-LIST.txt  README.md  build.rs
icondata_oc/src/: lib.rs
icondata_ri/: Cargo.toml  ICON-LIST.txt  ICONS.md  README.md  build.rs
icondata_ri/src/: lib.rs
icondata_si/: Cargo.toml  ICON-LIST.txt  ICONS.md  README.md  build.rs
icondata_tb/: Cargo.toml  ICON-LIST.txt  ICONS.md  README.md  build.rs
icondata_tb/src/: lib.rs
icondata_ti/: Cargo.toml  ICON-LIST.txt  README.md  build.rs
icondata_ti/src/: lib.rs
icondata_vs/: Cargo.toml  ICON-LIST.txt  README.md  build.rs
icondata_vs/src/: lib.rs
icondata_wi/: Cargo.toml  ICON-LIST.txt  README.md  build.rs
icondata_wi/src/: lib.rs
site/: icon_index-5b9f57fd0ec36e0d.js  index.html
size-test/: BENCH.md
size-test/enum/: Cargo.toml
size-test/enum/sizes/: dist-debug-nolto.txt  dist-debug.txt  dist-release-nolto.txt  dist-release-s.txt  dist-release-z.txt  dist-release.txt  target-debug-nolto.txt  target-release-nolto.txt  wasm-opt.txt
size-test/enum/src/: main.rs
