[workspace]
resolver = "2"
members = [
    "icondata",
    "icondata_ai",
    "icondata_bi",
    "icondata_bs",
    "icondata_cg",
    "icondata_ch",
    "icondata_fa",
    "icondata_fi",
    "icondata_hi",
    "icondata_im",
    "icondata_io",
    "icondata_lu",
    "icondata_oc",
    "icondata_ri",
    "icondata_si",
    "icondata_tb",
    "icondata_ti",
    "icondata_vs",
    "icondata_wi",
    "icondata_core",
]
exclude = ["build", "icon_index"]

[workspace.dependencies]
serde = "^1.0.103"
