###################
# Package Section #
###################

[dependencies]
icondata = "..."

[features]
serde = ["icondata/serde"]
strum = ["icondata/strum"]

Ai = ["icondata/Ai"]
Bi = ["icondata/Bi"]
Bs = ["icondata/Bs"]
Cg = ["icondata/Cg"]
Ch = ["icondata/Ch"]
Fa = ["icondata/Fa"]
Fi = ["icondata/Fi"]
Hi = ["icondata/Hi"]
Im = ["icondata/Im"]
Io = ["icondata/Io"]
Lu = ["icondata/Lu"]
Oc = ["icondata/Oc"]
Ri = ["icondata/Ri"]
Si = ["icondata/Si"]
Tb = ["icondata/Tb"]
Ti = ["icondata/Ti"]
Vs = ["icondata/Vs"]
Wi = ["icondata/Wi"]
