[package]
name = "icon_index"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8", features = ["csr"] }
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "Clipboard",
    "Storage",
    "DomRect",
    "ScrollToOptions",
    "ScrollBehavior",
    "KeyboardEvent",
] }
leptos_icons = "0.7.1"
icondata = "0.7"
