[package]
name = "icondata"
version = "0.3.1"
authors = ["Charles Edward Gagnon"]
edition = "2021"
description = "Icon data from free icon libraries."
readme = "../README.md"
repository = "https://github.com/Carlosted/icondata"
license = "MIT"
keywords = ["leptos", "icons"]
categories = ["web-programming"]
rust-version = "1.67.0"

[dependencies]
icondata_core = { version = "0.1.0", path = "../icondata_core" }

icondata_ai = { path = "../icondata_ai", version = "0.0.10", optional = true }
icondata_bi = { path = "../icondata_bi", version = "0.0.10", optional = true }
icondata_bs = { path = "../icondata_bs", version = "0.0.10", optional = true }
icondata_cg = { path = "../icondata_cg", version = "0.0.10", optional = true }
icondata_ch = { path = "../icondata_ch", version = "0.0.10", optional = true }
icondata_fa = { path = "../icondata_fa", version = "0.0.10", optional = true }
icondata_fi = { path = "../icondata_fi", version = "0.0.10", optional = true }
icondata_hi = { path = "../icondata_hi", version = "0.0.10", optional = true }
icondata_im = { path = "../icondata_im", version = "0.0.10", optional = true }
icondata_io = { path = "../icondata_io", version = "0.0.10", optional = true }
icondata_lu = { path = "../icondata_lu", version = "0.0.10", optional = true }
icondata_oc = { path = "../icondata_oc", version = "0.0.10", optional = true }
icondata_ri = { path = "../icondata_ri", version = "0.0.10", optional = true }
icondata_si = { path = "../icondata_si", version = "0.0.10", optional = true }
icondata_tb = { path = "../icondata_tb", version = "0.0.10", optional = true }
icondata_ti = { path = "../icondata_ti", version = "0.0.10", optional = true }
icondata_vs = { path = "../icondata_vs", version = "0.0.10", optional = true }
icondata_wi = { path = "../icondata_wi", version = "0.0.10", optional = true }

[features]
default = [
    "ant_design",
    "box",
    "bootstrap",
    "css_gg",
    "charm",
    "font_awesome",
    "feather",
    "heroicons",
    "icomoon",
    "ionicons",
    "lucide",
    "octicons",
    "remix",
    "simple",
    "tabler",
    "typicons",
    "vscode",
    "weather",
]
serde = ["icondata_core/serde"]
ant_design = ["dep:icondata_ai"]
box = ["dep:icondata_bi"]
bootstrap = ["dep:icondata_bs"]
css_gg = ["dep:icondata_cg"]
charm = ["dep:icondata_ch"]
font_awesome = ["dep:icondata_fa"]
feather = ["dep:icondata_fi"]
heroicons = ["dep:icondata_hi"]
icomoon = ["dep:icondata_im"]
ionicons = ["dep:icondata_io"]
lucide = ["dep:icondata_lu"]
octicons = ["dep:icondata_oc"]
remix = ["dep:icondata_ri"]
simple = ["dep:icondata_si"]
tabler = ["dep:icondata_tb"]
typicons = ["dep:icondata_ti"]
vscode = ["dep:icondata_vs"]
weather = ["dep:icondata_wi"]
