[package]
name = "icondata"
version = "0.3.1"
authors = ["Charles Edward Gagnon"]
edition = "2021"
description = "Icon data from free icon libraries."
readme = "../README.md"
repository = "https://github.com/Carlosted/icondata"
license = "MIT"
keywords = ["leptos", "icons"]
categories = ["web-programming"]
rust-version = "1.67.0"

[dependencies]
icondata_core = { version = "0.1.0", path = "../icondata_core" }

icondata_ai = { path = "../icondata_ai", version = "0.0.10", optional = true }
icondata_bi = { path = "../icondata_bi", version = "0.0.10", optional = true }
icondata_bs = { path = "../icondata_bs", version = "0.0.10", optional = true }
icondata_cg = { path = "../icondata_cg", version = "0.0.10", optional = true }
icondata_ch = { path = "../icondata_ch", version = "0.0.10", optional = true }
icondata_fa = { path = "../icondata_fa", version = "0.0.10", optional = true }
icondata_fi = { path = "../icondata_fi", version = "0.0.10", optional = true }
icondata_hi = { path = "../icondata_hi", version = "0.0.10", optional = true }
icondata_im = { path = "../icondata_im", version = "0.0.10", optional = true }
icondata_io = { path = "../icondata_io", version = "0.0.10", optional = true }
icondata_lu = { path = "../icondata_lu", version = "0.0.10", optional = true }
icondata_oc = { path = "../icondata_oc", version = "0.0.10", optional = true }
icondata_ri = { path = "../icondata_ri", version = "0.0.10", optional = true }
icondata_si = { path = "../icondata_si", version = "0.0.10", optional = true }
icondata_tb = { path = "../icondata_tb", version = "0.0.10", optional = true }
icondata_ti = { path = "../icondata_ti", version = "0.0.10", optional = true }
icondata_vs = { path = "../icondata_vs", version = "0.0.10", optional = true }
icondata_wi = { path = "../icondata_wi", version = "0.0.10", optional = true }


[features]
serde = ["icondata_core/serde"]
ant_design = ["dep:icondata_ai"]

default = [
    "ai",
    "bi",
    "bs",
    "cg",
    "ch",
    "fa",
    "fi",
    "hi",
    "im",
    "io",
    "lu",
    "oc",
    "ri",
    "si",
    "tb",
    "ti",
    "vs",
    "wi",
    ]

ai = ["dep:icondata_ai"]
bi = ["dep:icondata_bi"]
bs = ["dep:icondata_bs"]
cg = ["dep:icondata_cg"]
ch = ["dep:icondata_ch"]
fa = ["dep:icondata_fa"]
fi = ["dep:icondata_fi"]
hi = ["dep:icondata_hi"]
im = ["dep:icondata_im"]
io = ["dep:icondata_io"]
lu = ["dep:icondata_lu"]
oc = ["dep:icondata_oc"]
ri = ["dep:icondata_ri"]
si = ["dep:icondata_si"]
tb = ["dep:icondata_tb"]
ti = ["dep:icondata_ti"]
vs = ["dep:icondata_vs"]
wi = ["dep:icondata_wi"]
