[package]
name = "icondata"
version = "0.6.0"
authors = ["Charles Edward Gagnon"]
edition = "2021"
description = "Icon data from free icon libraries."
readme = "../README.md"
repository = "https://github.com/Carlosted/icondata"
license = "MIT"
keywords = ["leptos", "icons"]
categories = ["web-programming"]
rust-version = "1.67.0"

[dependencies]
icondata_core = { version = "0.1.0", path = "../icondata_core" }

icondata_ai = { path = "../icondata_ai", version = "0.1.0", optional = true }
icondata_bi = { path = "../icondata_bi", version = "0.1.0", optional = true }
icondata_bs = { path = "../icondata_bs", version = "0.1.0", optional = true }
icondata_cg = { path = "../icondata_cg", version = "0.1.0", optional = true }
icondata_ch = { path = "../icondata_ch", version = "0.1.0", optional = true }
icondata_fa = { path = "../icondata_fa", version = "0.1.0", optional = true }
icondata_fi = { path = "../icondata_fi", version = "0.1.0", optional = true }
icondata_hi = { path = "../icondata_hi", version = "0.2.0", optional = true }
icondata_im = { path = "../icondata_im", version = "0.1.0", optional = true }
icondata_io = { path = "../icondata_io", version = "0.1.0", optional = true }
icondata_lu = { path = "../icondata_lu", version = "0.1.0", optional = true }
icondata_mdi = { path = "../icondata_mdi", version = "0.1.0", optional = true }
icondata_oc = { path = "../icondata_oc", version = "0.1.0", optional = true }
icondata_ri = { path = "../icondata_ri", version = "0.1.0", optional = true }
icondata_si = { path = "../icondata_si", version = "0.1.0", optional = true }
icondata_tb = { path = "../icondata_tb", version = "0.1.0", optional = true }
icondata_ti = { path = "../icondata_ti", version = "0.1.0", optional = true }
icondata_vs = { path = "../icondata_vs", version = "0.1.0", optional = true }
icondata_wi = { path = "../icondata_wi", version = "0.1.0", optional = true }


[features]
serde = ["icondata_core/serde"]

default = [
    "ant-design-icons",
    "box-icons",
    "bootstrap-icons",
    "css-gg",
    "charm",
    "font-awesome",
    "feather",
    "heroicons",
    "ico-moon-free",
    "ionicons",
    "lucide",
    "material-design-icons",
    "github-octicons",
    "remix-icon",
    "simple-icons",
    "tabler-icons",
    "typicons",
    "vs-code-icons",
    "weather-icons",
    ]

ant-design-icons = ["dep:icondata_ai"]
box-icons = ["dep:icondata_bi"]
bootstrap-icons = ["dep:icondata_bs"]
css-gg = ["dep:icondata_cg"]
charm = ["dep:icondata_ch"]
font-awesome = ["dep:icondata_fa"]
feather = ["dep:icondata_fi"]
heroicons = ["dep:icondata_hi"]
ico-moon-free = ["dep:icondata_im"]
ionicons = ["dep:icondata_io"]
lucide = ["dep:icondata_lu"]
material-design-icons = ["dep:icondata_mdi"]
github-octicons = ["dep:icondata_oc"]
remix-icon = ["dep:icondata_ri"]
simple-icons = ["dep:icondata_si"]
tabler-icons = ["dep:icondata_tb"]
typicons = ["dep:icondata_ti"]
vs-code-icons = ["dep:icondata_vs"]
weather-icons = ["dep:icondata_wi"]
