[package]
name = "icondata_bs"
version = "0.0.8"
authors = ["Charles Edward Gagnon"]
edition = "2021"
description = "Library providing SVG and corresponding metadata for \"Bootstrap Icons\"."
readme = "./README.md"
repository = "https://github.com/Carlosted/icondata"
license = "MIT"
keywords = ["icons"]
categories = ["web-programming"]
rust-version = "1.60.0"
exclude = ["ICON-LIST.txt"]

[dependencies]
icondata_core = "0.0.2"
serde = { workspace = true, features = ["derive"], optional = true }
strum = { version = "0.24", optional = true, features = ["derive"] }

[build-dependencies]
anyhow = "1.0.75"
toml = "0.8.6"