[package]
name = "icondata_ch"
version = "0.0.8"
authors = ["Charles Edward Gagnon"]
edition = "2021"
description = "Library providing SVG and corresponding metadata for \"Charm\"."
readme = "./README.md"
repository = "https://github.com/Carlosted/icondata"
license = "MIT"
keywords = ["icons"]
categories = ["web-programming"]

[dependencies]
icondata_core = "0.0.2"
serde = { version = "1", features = ["derive"], optional = true }
strum = { version = "0.24", optional = true, features = ["derive"] }

[features]
ChAnchor = []
ChApps = []
ChAppsMinus = []
ChAppsPlus = []
ChArchive = []
ChArrowDown = []
ChArrowDownLeft = []
ChArrowDownRight = []
ChArrowLeft = []
ChArrowRight = []
ChArrowUp = []
ChArrowUpLeft = []
ChArrowUpRight = []
ChAtSign = []
ChAtom = []
ChBell = []
ChBellSlash = []
ChBin = []
ChBinary = []
ChBlock = []
ChBluetooth = []
ChBluetoothConnected = []
ChBluetoothSearching = []
ChBluetoothSlash = []
ChBook = []
ChBookOpen = []
ChBookmark = []
ChBriefcase = []
ChBug = []
ChCalendar = []
ChCamera = []
ChCameraVideo = []
ChCameraVideoSlash = []
ChCandy = []
ChCards = []
ChCast = []
ChCertificate = []
ChChartBar = []
ChChartLine = []
ChChevronDown = []
ChChevronLeft = []
ChChevronRight = []
ChChevronUp = []
ChChevronsDown = []
ChChevronsLeft = []
ChChevronsRight = []
ChChevronsUp = []
ChChevronsUpDown = []
ChChip = []
ChCircle = []
ChCircleCross = []
ChCircleMinus = []
ChCircleTick = []
ChCircleWarning = []
ChClipboard = []
ChClipboardTick = []
ChClock = []
ChClockAlarm = []
ChCloud = []
ChClover = []
ChCode = []
ChCoffee = []
ChCog = []
ChCompass = []
ChConicalFlask = []
ChContainer = []
ChCopy = []
ChCopyleft = []
ChCopyright = []
ChCreditCard = []
ChCrop = []
ChCross = []
ChCrosshair = []
ChCube = []
ChCursor = []
ChDatabase = []
ChDiamond = []
ChDiff = []
ChDisc = []
ChDownload = []
ChDroplet = []
ChEraser = []
ChEye = []
ChEyeSlash = []
ChFaceFrown = []
ChFaceNeutral = []
ChFaceSmile = []
ChFile = []
ChFileBinary = []
ChFileCode = []
ChFileSymlink = []
ChFiles = []
ChFilter = []
ChFlag = []
ChFlame = []
ChFloppyDisk = []
ChFolder = []
ChFolderSymlink = []
ChFolders = []
ChForward = []
ChGamepad = []
ChGem = []
ChGift = []
ChGitBranch = []
ChGitCherryPick = []
ChGitCommit = []
ChGitCompare = []
ChGitFork = []
ChGitMerge = []
ChGitRequest = []
ChGitRequestCross = []
ChGitRequestDraft = []
ChGithub = []
ChGitlab = []
ChGlasses = []
ChGlobe = []
ChGrabHorizontal = []
ChGrabVertical = []
ChGraduateCap = []
ChHash = []
ChHeadphones = []
ChHeart = []
ChHelp = []
ChHexagon = []
ChHome = []
ChHourglass = []
ChId = []
ChImage = []
ChInbox = []
ChInfinity = []
ChInfo = []
ChKey = []
ChLaptop = []
ChLayoutColumns = []
ChLayoutDashboard = []
ChLayoutGrid = []
ChLayoutList = []
ChLayoutRows = []
ChLayoutSidebar = []
ChLayoutStackH = []
ChLayoutStackV = []
ChLightbulb = []
ChLightningBolt = []
ChLink = []
ChLinkExternal = []
ChLinkSlash = []
ChMail = []
ChMap = []
ChMapPin = []
ChMediaBack = []
ChMediaEject = []
ChMediaFastForward = []
ChMediaPause = []
ChMediaPlay = []
ChMediaRewind = []
ChMediaSkip = []
ChMenuHamburger = []
ChMenuKebab = []
ChMenuMeatball = []
ChMessage = []
ChMessages = []
ChMicrophone = []
ChMinus = []
ChMobile = []
ChMonitor = []
ChMonitorArrow = []
ChMonitorCross = []
ChMoon = []
ChMove = []
ChMusic = []
ChNewspaper = []
ChNorthStar = []
ChNotes = []
ChNotesCross = []
ChNotesTick = []
ChNut = []
ChOctagon = []
ChOctagonWarning = []
ChOrganisation = []
ChPackage = []
ChPadlock = []
ChPaperPlane = []
ChPaperclip = []
ChPencil = []
ChPeople = []
ChPerson = []
ChPhone = []
ChPhoneCall = []
ChPhoneCross = []
ChPhoneForward = []
ChPhoneIncoming = []
ChPhoneOutgoing = []
ChPin = []
ChPlantPot = []
ChPlus = []
ChPower = []
ChPrinter = []
ChPulse = []
ChQuote = []
ChRefresh = []
ChReply = []
ChRobot = []
ChRocket = []
ChRotateAntiClockwise = []
ChRotateClockwise = []
ChScales = []
ChScreenMaximise = []
ChScreenMinimise = []
ChSearch = []
ChServer = []
ChShare = []
ChShield = []
ChShieldCross = []
ChShieldKeyhole = []
ChShieldTick = []
ChShieldWarning = []
ChShoppingBag = []
ChSignIn = []
ChSignOut = []
ChSignpost = []
ChSkull = []
ChSnowflake = []
ChSoundDown = []
ChSoundMute = []
ChSoundUp = []
ChSpeaker = []
ChSquare = []
ChSquareCross = []
ChSquareTick = []
ChStack = []
ChStackPop = []
ChStackPush = []
ChStar = []
ChStickyNote = []
ChSun = []
ChSwapHorizontal = []
ChSwapVertical = []
ChSword = []
ChSwords = []
ChTablet = []
ChTag = []
ChTelescope = []
ChTent = []
ChTerminal = []
ChThumbDown = []
ChThumbUp = []
ChTick = []
ChTickDouble = []
ChTicket = []
ChTreeFir = []
ChTriangle = []
ChTrophy = []
ChUmbrella = []
ChUpload = []
ChWifi = []
ChWifiFair = []
ChWifiPoor = []
ChWifiSlash = []
ChWifiWarning = []
ChZoomIn = []
ChZoomOut = []
