[package]
name = "icondata_fa"
version = "0.0.8"
authors = ["Charles Edward Gagnon"]
edition = "2021"
description = "Library providing SVG and corresponding metadata for \"Font Awesome\"."
readme = "./README.md"
repository = "https://github.com/Carlosted/icondata"
license = "MIT"
keywords = ["icons"]
categories = ["web-programming"]
rust-version = "1.60.0"

[dependencies]
icondata_core = "0.0.2"
serde = { workspace = true, features = ["derive"], optional = true }
strum = { version = "0.24", optional = true, features = ["derive"] }
