[package]
name = "icondata_lu"
version = "0.0.5"
authors = ["Charles Edward Gagnon"]
edition = "2021"
description = "Library providing SVG and corresponding metadata for \"Lucide\"."
readme = "./README.md"
repository = "https://github.com/Carlosted/icondata"
license = "MIT"
keywords = ["icons"]
categories = ["web-programming"]

[dependencies]
icondata_core = "0.0.2"
serde = { version = "1", features = ["derive"], optional = true }
strum = { version = "0.24", optional = true, features = ["derive"] }

[features]
LuAccessibility = []
LuActivity = []
LuAirVent = []
LuAirplay = []
LuAlarmCheck = []
LuAlarmClock = []
LuAlarmClockOff = []
LuAlarmMinus = []
LuAlarmPlus = []
LuAlbum = []
LuAlertCircle = []
LuAlertOctagon = []
LuAlertTriangle = []
LuAlignCenter = []
LuAlignCenterHorizontal = []
LuAlignCenterVertical = []
LuAlignEndHorizontal = []
LuAlignEndVertical = []
LuAlignHorizontalDistributeCenter = []
LuAlignHorizontalDistributeEnd = []
LuAlignHorizontalDistributeStart = []
LuAlignHorizontalJustifyCenter = []
LuAlignHorizontalJustifyEnd = []
LuAlignHorizontalJustifyStart = []
LuAlignHorizontalSpaceAround = []
LuAlignHorizontalSpaceBetween = []
LuAlignJustify = []
LuAlignLeft = []
LuAlignRight = []
LuAlignStartHorizontal = []
LuAlignStartVertical = []
LuAlignVerticalDistributeCenter = []
LuAlignVerticalDistributeEnd = []
LuAlignVerticalDistributeStart = []
LuAlignVerticalJustifyCenter = []
LuAlignVerticalJustifyEnd = []
LuAlignVerticalJustifyStart = []
LuAlignVerticalSpaceAround = []
LuAlignVerticalSpaceBetween = []
LuAnchor = []
LuAngry = []
LuAnnoyed = []
LuAperture = []
LuApple = []
LuArchive = []
LuArchiveRestore = []
LuArmchair = []
LuArrowBigDown = []
LuArrowBigLeft = []
LuArrowBigRight = []
LuArrowBigUp = []
LuArrowDown = []
LuArrowDownCircle = []
LuArrowDownLeft = []
LuArrowDownLeftFromCircle = []
LuArrowDownRight = []
LuArrowDownRightFromCircle = []
LuArrowLeft = []
LuArrowLeftCircle = []
LuArrowLeftRight = []
LuArrowRight = []
LuArrowRightCircle = []
LuArrowUp = []
LuArrowUpCircle = []
LuArrowUpDown = []
LuArrowUpLeft = []
LuArrowUpLeftFromCircle = []
LuArrowUpRight = []
LuArrowUpRightFromCircle = []
LuAsterisk = []
LuAtSign = []
LuAtom = []
LuAward = []
LuAxe = []
LuAxis3d = []
LuBaby = []
LuBackpack = []
LuBaggageClaim = []
LuBan = []
LuBanana = []
LuBanknote = []
LuBarChart = []
LuBarChart2 = []
LuBarChart3 = []
LuBarChart4 = []
LuBarChartHorizontal = []
LuBaseline = []
LuBath = []
LuBattery = []
LuBatteryCharging = []
LuBatteryFull = []
LuBatteryLow = []
LuBatteryMedium = []
LuBatteryWarning = []
LuBeaker = []
LuBean = []
LuBeanOff = []
LuBed = []
LuBedDouble = []
LuBedSingle = []
LuBeef = []
LuBeer = []
LuBell = []
LuBellMinus = []
LuBellOff = []
LuBellPlus = []
LuBellRing = []
LuBike = []
LuBinary = []
LuBird = []
LuBitcoin = []
LuBlinds = []
LuBluetooth = []
LuBluetoothConnected = []
LuBluetoothOff = []
LuBluetoothSearching = []
LuBold = []
LuBomb = []
LuBone = []
LuBook = []
LuBookCopy = []
LuBookDown = []
LuBookKey = []
LuBookLock = []
LuBookMarked = []
LuBookMinus = []
LuBookOpen = []
LuBookOpenCheck = []
LuBookPlus = []
LuBookTemplate = []
LuBookUp = []
LuBookX = []
LuBookmark = []
LuBookmarkMinus = []
LuBookmarkPlus = []
LuBot = []
LuBox = []
LuBoxSelect = []
LuBoxes = []
LuBrain = []
LuBrainCircuit = []
LuBrainCog = []
LuBriefcase = []
LuBrush = []
LuBug = []
LuBuilding = []
LuBuilding2 = []
LuBus = []
LuCake = []
LuCalculator = []
LuCalendar = []
LuCalendarCheck = []
LuCalendarCheck2 = []
LuCalendarClock = []
LuCalendarDays = []
LuCalendarHeart = []
LuCalendarMinus = []
LuCalendarOff = []
LuCalendarPlus = []
LuCalendarRange = []
LuCalendarSearch = []
LuCalendarX = []
LuCalendarX2 = []
LuCamera = []
LuCameraOff = []
LuCandy = []
LuCandyOff = []
LuCar = []
LuCarrot = []
LuCaseLower = []
LuCaseSensitive = []
LuCaseUpper = []
LuCast = []
LuCastle = []
LuCat = []
LuCheck = []
LuCheckCheck = []
LuCheckCircle = []
LuCheckCircle2 = []
LuCheckSquare = []
LuChefHat = []
LuCherry = []
LuChevronDown = []
LuChevronDownSquare = []
LuChevronFirst = []
LuChevronLast = []
LuChevronLeft = []
LuChevronLeftSquare = []
LuChevronRight = []
LuChevronRightSquare = []
LuChevronUp = []
LuChevronUpSquare = []
LuChevronsDown = []
LuChevronsDownUp = []
LuChevronsLeft = []
LuChevronsLeftRight = []
LuChevronsRight = []
LuChevronsRightLeft = []
LuChevronsUp = []
LuChevronsUpDown = []
LuChrome = []
LuChurch = []
LuCigarette = []
LuCigaretteOff = []
LuCircle = []
LuCircleDot = []
LuCircleEllipsis = []
LuCircleEqual = []
LuCircleOff = []
LuCircleSlash = []
LuCircleSlash2 = []
LuCircuitBoard = []
LuCitrus = []
LuClapperboard = []
LuClipboard = []
LuClipboardCheck = []
LuClipboardCopy = []
LuClipboardEdit = []
LuClipboardList = []
LuClipboardPaste = []
LuClipboardSignature = []
LuClipboardType = []
LuClipboardX = []
LuClock = []
LuClock1 = []
LuClock10 = []
LuClock11 = []
LuClock12 = []
LuClock2 = []
LuClock3 = []
LuClock4 = []
LuClock5 = []
LuClock6 = []
LuClock7 = []
LuClock8 = []
LuClock9 = []
LuCloud = []
LuCloudCog = []
LuCloudDrizzle = []
LuCloudFog = []
LuCloudHail = []
LuCloudLightning = []
LuCloudMoon = []
LuCloudMoonRain = []
LuCloudOff = []
LuCloudRain = []
LuCloudRainWind = []
LuCloudSnow = []
LuCloudSun = []
LuCloudSunRain = []
LuCloudy = []
LuClover = []
LuCode = []
LuCode2 = []
LuCodepen = []
LuCodesandbox = []
LuCoffee = []
LuCog = []
LuCoins = []
LuColumns = []
LuCommand = []
LuCompass = []
LuComponent = []
LuConciergeBell = []
LuConstruction = []
LuContact = []
LuContrast = []
LuCookie = []
LuCopy = []
LuCopyCheck = []
LuCopyMinus = []
LuCopyPlus = []
LuCopySlash = []
LuCopyX = []
LuCopyleft = []
LuCopyright = []
LuCornerDownLeft = []
LuCornerDownRight = []
LuCornerLeftDown = []
LuCornerLeftUp = []
LuCornerRightDown = []
LuCornerRightUp = []
LuCornerUpLeft = []
LuCornerUpRight = []
LuCpu = []
LuCreativeCommons = []
LuCreditCard = []
LuCroissant = []
LuCrop = []
LuCross = []
LuCrosshair = []
LuCrown = []
LuCupSoda = []
LuCurlyBraces = []
LuCurrency = []
LuDatabase = []
LuDatabaseBackup = []
LuDelete = []
LuDiamond = []
LuDice1 = []
LuDice2 = []
LuDice3 = []
LuDice4 = []
LuDice5 = []
LuDice6 = []
LuDices = []
LuDiff = []
LuDisc = []
LuDisc2 = []
LuDivide = []
LuDivideCircle = []
LuDivideSquare = []
LuDna = []
LuDnaOff = []
LuDog = []
LuDollarSign = []
LuDoorClosed = []
LuDoorOpen = []
LuDownload = []
LuDownloadCloud = []
LuDribbble = []
LuDroplet = []
LuDroplets = []
LuDrumstick = []
LuDumbbell = []
LuEar = []
LuEarOff = []
LuEdit = []
LuEdit2 = []
LuEdit3 = []
LuEgg = []
LuEggFried = []
LuEggOff = []
LuEqual = []
LuEqualNot = []
LuEraser = []
LuEuro = []
LuExpand = []
LuExternalLink = []
LuEye = []
LuEyeOff = []
LuFacebook = []
LuFactory = []
LuFan = []
LuFastForward = []
LuFeather = []
LuFigma = []
LuFile = []
LuFileArchive = []
LuFileAudio = []
LuFileAudio2 = []
LuFileAxis3d = []
LuFileBadge = []
LuFileBadge2 = []
LuFileBarChart = []
LuFileBarChart2 = []
LuFileBox = []
LuFileCheck = []
LuFileCheck2 = []
LuFileClock = []
LuFileCode = []
LuFileCog = []
LuFileCog2 = []
LuFileDiff = []
LuFileDigit = []
LuFileDown = []
LuFileEdit = []
LuFileHeart = []
LuFileImage = []
LuFileInput = []
LuFileJson = []
LuFileJson2 = []
LuFileKey = []
LuFileKey2 = []
LuFileLineChart = []
LuFileLock = []
LuFileLock2 = []
LuFileMinus = []
LuFileMinus2 = []
LuFileOutput = []
LuFilePieChart = []
LuFilePlus = []
LuFilePlus2 = []
LuFileQuestion = []
LuFileScan = []
LuFileSearch = []
LuFileSearch2 = []
LuFileSignature = []
LuFileSpreadsheet = []
LuFileSymlink = []
LuFileTerminal = []
LuFileText = []
LuFileType = []
LuFileType2 = []
LuFileUp = []
LuFileVideo = []
LuFileVideo2 = []
LuFileVolume = []
LuFileVolume2 = []
LuFileWarning = []
LuFileX = []
LuFileX2 = []
LuFiles = []
LuFilm = []
LuFilter = []
LuFilterX = []
LuFingerprint = []
LuFish = []
LuFishOff = []
LuFlag = []
LuFlagOff = []
LuFlagTriangleLeft = []
LuFlagTriangleRight = []
LuFlame = []
LuFlashlight = []
LuFlashlightOff = []
LuFlaskConical = []
LuFlaskConicalOff = []
LuFlaskRound = []
LuFlipHorizontal = []
LuFlipHorizontal2 = []
LuFlipVertical = []
LuFlipVertical2 = []
LuFlower = []
LuFlower2 = []
LuFocus = []
LuFolder = []
LuFolderArchive = []
LuFolderCheck = []
LuFolderClock = []
LuFolderClosed = []
LuFolderCog = []
LuFolderCog2 = []
LuFolderDown = []
LuFolderEdit = []
LuFolderGit = []
LuFolderGit2 = []
LuFolderHeart = []
LuFolderInput = []
LuFolderKey = []
LuFolderLock = []
LuFolderMinus = []
LuFolderOpen = []
LuFolderOutput = []
LuFolderPlus = []
LuFolderSearch = []
LuFolderSearch2 = []
LuFolderSymlink = []
LuFolderTree = []
LuFolderUp = []
LuFolderX = []
LuFolders = []
LuFootprints = []
LuForklift = []
LuFormInput = []
LuForward = []
LuFrame = []
LuFramer = []
LuFrown = []
LuFuel = []
LuFunctionSquare = []
LuGamepad = []
LuGamepad2 = []
LuGauge = []
LuGavel = []
LuGem = []
LuGhost = []
LuGift = []
LuGitBranch = []
LuGitBranchPlus = []
LuGitCommit = []
LuGitCompare = []
LuGitFork = []
LuGitMerge = []
LuGitPullRequest = []
LuGitPullRequestClosed = []
LuGitPullRequestDraft = []
LuGithub = []
LuGitlab = []
LuGlassWater = []
LuGlasses = []
LuGlobe = []
LuGlobe2 = []
LuGrab = []
LuGraduationCap = []
LuGrape = []
LuGrid = []
LuGrip = []
LuGripHorizontal = []
LuGripVertical = []
LuHammer = []
LuHand = []
LuHandMetal = []
LuHardDrive = []
LuHardHat = []
LuHash = []
LuHaze = []
LuHeading = []
LuHeading1 = []
LuHeading2 = []
LuHeading3 = []
LuHeading4 = []
LuHeading5 = []
LuHeading6 = []
LuHeadphones = []
LuHeart = []
LuHeartCrack = []
LuHeartHandshake = []
LuHeartOff = []
LuHeartPulse = []
LuHelpCircle = []
LuHelpingHand = []
LuHexagon = []
LuHighlighter = []
LuHistory = []
LuHome = []
LuHop = []
LuHopOff = []
LuHotel = []
LuHourglass = []
LuIceCream = []
LuIceCream2 = []
LuImage = []
LuImageMinus = []
LuImageOff = []
LuImagePlus = []
LuImport = []
LuInbox = []
LuIndent = []
LuIndianRupee = []
LuInfinity = []
LuInfo = []
LuInspect = []
LuInstagram = []
LuItalic = []
LuJapaneseYen = []
LuJoystick = []
LuKey = []
LuKeyboard = []
LuLamp = []
LuLampCeiling = []
LuLampDesk = []
LuLampFloor = []
LuLampWallDown = []
LuLampWallUp = []
LuLandmark = []
LuLanguages = []
LuLaptop = []
LuLaptop2 = []
LuLasso = []
LuLassoSelect = []
LuLaugh = []
LuLayers = []
LuLayout = []
LuLayoutDashboard = []
LuLayoutGrid = []
LuLayoutList = []
LuLayoutTemplate = []
LuLeaf = []
LuLibrary = []
LuLifeBuoy = []
LuLightbulb = []
LuLightbulbOff = []
LuLineChart = []
LuLink = []
LuLink2 = []
LuLink2Off = []
LuLinkedin = []
LuList = []
LuListChecks = []
LuListEnd = []
LuListMinus = []
LuListMusic = []
LuListOrdered = []
LuListPlus = []
LuListStart = []
LuListTree = []
LuListVideo = []
LuListX = []
LuLoader = []
LuLoader2 = []
LuLocate = []
LuLocateFixed = []
LuLocateOff = []
LuLock = []
LuLogIn = []
LuLogOut = []
LuLuggage = []
LuMagnet = []
LuMail = []
LuMailCheck = []
LuMailMinus = []
LuMailOpen = []
LuMailPlus = []
LuMailQuestion = []
LuMailSearch = []
LuMailWarning = []
LuMailX = []
LuMailbox = []
LuMails = []
LuMap = []
LuMapPin = []
LuMapPinOff = []
LuMartini = []
LuMaximize = []
LuMaximize2 = []
LuMedal = []
LuMegaphone = []
LuMegaphoneOff = []
LuMeh = []
LuMenu = []
LuMessageCircle = []
LuMessageSquare = []
LuMessageSquareDashed = []
LuMessageSquarePlus = []
LuMessagesSquare = []
LuMic = []
LuMic2 = []
LuMicOff = []
LuMicroscope = []
LuMicrowave = []
LuMilestone = []
LuMilk = []
LuMilkOff = []
LuMinimize = []
LuMinimize2 = []
LuMinus = []
LuMinusCircle = []
LuMinusSquare = []
LuMonitor = []
LuMonitorOff = []
LuMonitorSmartphone = []
LuMonitorSpeaker = []
LuMoon = []
LuMoreHorizontal = []
LuMoreVertical = []
LuMountain = []
LuMountainSnow = []
LuMouse = []
LuMousePointer = []
LuMousePointer2 = []
LuMousePointerClick = []
LuMove = []
LuMove3d = []
LuMoveDiagonal = []
LuMoveDiagonal2 = []
LuMoveHorizontal = []
LuMoveVertical = []
LuMusic = []
LuMusic2 = []
LuMusic3 = []
LuMusic4 = []
LuNavigation = []
LuNavigation2 = []
LuNavigation2Off = []
LuNavigationOff = []
LuNetwork = []
LuNewspaper = []
LuNfc = []
LuNut = []
LuNutOff = []
LuOctagon = []
LuOption = []
LuOrbit = []
LuOutdent = []
LuPackage = []
LuPackage2 = []
LuPackageCheck = []
LuPackageMinus = []
LuPackageOpen = []
LuPackagePlus = []
LuPackageSearch = []
LuPackageX = []
LuPaintBucket = []
LuPaintbrush = []
LuPaintbrush2 = []
LuPalette = []
LuPalmtree = []
LuPaperclip = []
LuParkingCircle = []
LuParkingCircleOff = []
LuParkingSquare = []
LuParkingSquareOff = []
LuPartyPopper = []
LuPause = []
LuPauseCircle = []
LuPauseOctagon = []
LuPenTool = []
LuPencil = []
LuPercent = []
LuPersonStanding = []
LuPhone = []
LuPhoneCall = []
LuPhoneForwarded = []
LuPhoneIncoming = []
LuPhoneMissed = []
LuPhoneOff = []
LuPhoneOutgoing = []
LuPictureInPicture = []
LuPictureInPicture2 = []
LuPieChart = []
LuPiggyBank = []
LuPilcrow = []
LuPill = []
LuPin = []
LuPinOff = []
LuPipette = []
LuPizza = []
LuPlane = []
LuPlaneLanding = []
LuPlaneTakeoff = []
LuPlay = []
LuPlayCircle = []
LuPlug = []
LuPlug2 = []
LuPlugZap = []
LuPlus = []
LuPlusCircle = []
LuPlusSquare = []
LuPocket = []
LuPodcast = []
LuPointer = []
LuPoundSterling = []
LuPower = []
LuPowerOff = []
LuPrinter = []
LuPuzzle = []
LuQrCode = []
LuQuote = []
LuRadio = []
LuRadioReceiver = []
LuRadioTower = []
LuRat = []
LuReceipt = []
LuRectangleHorizontal = []
LuRectangleVertical = []
LuRecycle = []
LuRedo = []
LuRedo2 = []
LuRefreshCcw = []
LuRefreshCw = []
LuRefrigerator = []
LuRegex = []
LuRemoveFormatting = []
LuRepeat = []
LuRepeat1 = []
LuReplace = []
LuReplaceAll = []
LuReply = []
LuReplyAll = []
LuRewind = []
LuRocket = []
LuRockingChair = []
LuRotate3d = []
LuRotateCcw = []
LuRotateCw = []
LuRouter = []
LuRss = []
LuRuler = []
LuRussianRuble = []
LuSailboat = []
LuSalad = []
LuSandwich = []
LuSave = []
LuSaveAll = []
LuScale = []
LuScale3d = []
LuScaling = []
LuScan = []
LuScanFace = []
LuScanLine = []
LuSchool = []
LuSchool2 = []
LuScissors = []
LuScreenShare = []
LuScreenShareOff = []
LuScroll = []
LuSearch = []
LuSend = []
LuSeparatorHorizontal = []
LuSeparatorVertical = []
LuServer = []
LuServerCog = []
LuServerCrash = []
LuServerOff = []
LuSettings = []
LuSettings2 = []
LuShare = []
LuShare2 = []
LuSheet = []
LuShield = []
LuShieldAlert = []
LuShieldCheck = []
LuShieldClose = []
LuShieldOff = []
LuShieldQuestion = []
LuShip = []
LuShirt = []
LuShoppingBag = []
LuShoppingCart = []
LuShovel = []
LuShowerHead = []
LuShrink = []
LuShrub = []
LuShuffle = []
LuSidebar = []
LuSidebarClose = []
LuSidebarOpen = []
LuSigma = []
LuSignal = []
LuSignalHigh = []
LuSignalLow = []
LuSignalMedium = []
LuSignalZero = []
LuSiren = []
LuSkipBack = []
LuSkipForward = []
LuSkull = []
LuSlack = []
LuSlice = []
LuSliders = []
LuSlidersHorizontal = []
LuSmartphone = []
LuSmartphoneCharging = []
LuSmartphoneNfc = []
LuSmile = []
LuSmilePlus = []
LuSnowflake = []
LuSofa = []
LuSortAsc = []
LuSortDesc = []
LuSoup = []
LuSpace = []
LuSpeaker = []
LuSpline = []
LuSplitSquareHorizontal = []
LuSplitSquareVertical = []
LuSprout = []
LuSquare = []
LuStamp = []
LuStar = []
LuStarHalf = []
LuStarOff = []
LuStepBack = []
LuStepForward = []
LuStethoscope = []
LuSticker = []
LuStickyNote = []
LuStopCircle = []
LuStore = []
LuStretchHorizontal = []
LuStretchVertical = []
LuStrikethrough = []
LuSubscript = []
LuSubtitles = []
LuSun = []
LuSunDim = []
LuSunMedium = []
LuSunMoon = []
LuSunSnow = []
LuSunrise = []
LuSunset = []
LuSuperscript = []
LuSwissFranc = []
LuSwitchCamera = []
LuSword = []
LuSwords = []
LuSyringe = []
LuTable = []
LuTable2 = []
LuTablet = []
LuTablets = []
LuTag = []
LuTags = []
LuTarget = []
LuTent = []
LuTerminal = []
LuTerminalSquare = []
LuTestTube = []
LuTestTube2 = []
LuTestTubes = []
LuText = []
LuTextCursor = []
LuTextCursorInput = []
LuTextSelection = []
LuThermometer = []
LuThermometerSnowflake = []
LuThermometerSun = []
LuThumbsDown = []
LuThumbsUp = []
LuTicket = []
LuTimer = []
LuTimerOff = []
LuTimerReset = []
LuToggleLeft = []
LuToggleRight = []
LuTornado = []
LuTowerControl = []
LuToyBrick = []
LuTrain = []
LuTrash = []
LuTrash2 = []
LuTreeDeciduous = []
LuTreePine = []
LuTrees = []
LuTrello = []
LuTrendingDown = []
LuTrendingUp = []
LuTriangle = []
LuTrophy = []
LuTruck = []
LuTv = []
LuTv2 = []
LuTwitch = []
LuTwitter = []
LuType = []
LuUmbrella = []
LuUnderline = []
LuUndo = []
LuUndo2 = []
LuUnlink = []
LuUnlink2 = []
LuUnlock = []
LuUpload = []
LuUploadCloud = []
LuUsb = []
LuUser = []
LuUserCheck = []
LuUserCog = []
LuUserMinus = []
LuUserPlus = []
LuUserX = []
LuUsers = []
LuUtensils = []
LuUtensilsCrossed = []
LuUtilityPole = []
LuVegan = []
LuVenetianMask = []
LuVerified = []
LuVibrate = []
LuVibrateOff = []
LuVideo = []
LuVideoOff = []
LuView = []
LuVoicemail = []
LuVolume = []
LuVolume1 = []
LuVolume2 = []
LuVolumeX = []
LuVote = []
LuWallet = []
LuWand = []
LuWand2 = []
LuWarehouse = []
LuWatch = []
LuWaves = []
LuWebcam = []
LuWebhook = []
LuWheat = []
LuWheatOff = []
LuWholeWord = []
LuWifi = []
LuWifiOff = []
LuWind = []
LuWine = []
LuWineOff = []
LuWrapText = []
LuWrench = []
LuX = []
LuXCircle = []
LuXOctagon = []
LuXSquare = []
LuYoutube = []
LuZap = []
LuZapOff = []
LuZoomIn = []
LuZoomOut = []
